--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,4 +5,10 @@ body {
 .card-title {
   text-align: center;
   border-bottom: 5px gold solid;
+  font-size: 30px;
+}
+
+.card-text {
+  font-size: 24px;
+  text-align: center;
 }
